crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__hover__section.snap
---
source: tests/lsp/text_document/hover.rs
expression: "find_hover(r#\"\n%! main.tex\n\\section{Foo}\n\\label{sec:foo}\n         |\n       ^^^^^^^\"#)"
---
{
  "kind": "plaintext",
  "value": "Section (Foo)"
}
